_archive/governance-services/2.5/concepts/welcome-rm.md
---
audience: 
---

# Alfresco Records Management

Alfresco Records Management controls important information that needs to be retained over time. It's used in highly regulated environments, for managing governmental information or personnel records, or where information might be audited.

Fully integrated into Alfresco, Records Management makes it easy to work with files and have them declared as records at the right time, without changing the way you work.

-   **[What's new in Alfresco Records Management](../references/whats-new-rm.md)**  
Alfresco Records Management has several new features for this release.
-   **[Records Management video tutorials](../topics/alfresco-video-tutorials-rm.md)**  
Watch these videos for tips on using Alfresco Records Management.
-   **[Records Management QuickStart](../concepts/rm-gs-overview.md)**  
Although Alfresco Records Management has a huge amount of functionality available, it's actually pretty easy to learn the essentials and get up and running.
-   **[Using Records Management](../concepts/rm-intro.md)**  
With Alfresco Records Management you store and control all your records in a dedicated site. A Records Management site is like other Alfresco sites, but with additional controls placed on its content.
-   **[Installing Records Management](../tasks/rm-install-proc.md)**  
Use this information when installing and configuring Records Management.
-   **[Upgrading Records Management](../tasks/rm-upgrade-proc.md)**  
Use this information to upgrade your Records Management installation.
-   **[Administering Records Management](../concepts/rm-admin-intro.md)**  
The RM Admin Tools is where you configure the Records Management site.
-   **[Records Management FAQs](../references/rm-user-faqs.md)**  
Here are the answers to some frequently asked questions about Records Management.
-   **[Records Management Glossary](../references/rm-glossary.md)**  
The glossary explains the meaning of terms and acronyms that are used in the Alfresco Records Management documentation.
-   **[Copyright](../reuse/copyright.md)**  

-   **[Disclaimer](../reuse/disclaimer.md)**  


